--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -7,37 +7,38 @@
             <h2>Регистрация</h2>
             <div class="login-form-input-btn">
                 <div class="login-form-input">
-                    <input type="text" placeholder="Логин">
-                    <input type="text" placeholder="Никнейм">
-                    <input type="text" placeholder="ФИО">
-                    <input type="text" placeholder="Почта">
-                    <input type="text" placeholder="+7">
-                    <input type="text" placeholder="Пароль">
+                    <input type="text" id="reg-username" placeholder="Логин" required>
+                    <input type="text" id="full_name" placeholder="ФИО">
+                    <input type="email" id="email" placeholder="Почта" required>
+                    <input type="tel" id="phone" placeholder="+7">
+                    <input type="password" id="reg-password" placeholder="Пароль" required>
+                    <input type="password" id="password2" placeholder="Повторите пароль" required>
                 </div>
                 <div class="register-span">
                     <div class="register-cheked">
                         <label class="check-btn-label">
-                            <input type="checkbox" class="check-input">
+                            <input type="checkbox" id="agreed_to_terms" class="check-input" required>
                             <span class="custom-checkbox"></span>
                             <span class="btn-text">Согласие на обработку персональных данных</span>
                         </label>
                     </div>
                     <div class="register-cheked">
                         <label class="check-btn-label">
-                            <input type="checkbox" class="check-input">
+                            <input type="checkbox" id="agreed_to_offer" class="check-input">
                             <span class="custom-checkbox"></span>
                             <span class="btn-text">Договор публичной оферты</span>
                         </label>
                     </div>
                     <div class="register-cheked">
                         <label class="check-btn-label">
-                            <input type="checkbox" class="check-input">
+                            <input type="checkbox" id="agreed_to_privacy" class="check-input">
                             <span class="custom-checkbox"></span>
                             <span class="btn-text">Политика конфиденциальности</span>
                         </label>
                     </div>
                 </div>
-                <button class="login-form-btn">Зарегистрироваться</button>
+                <div id="reg-error-message" class="error-message" style="color: red; display: none; margin: 10px 0;"></div>
+                <button class="login-form-btn " onclick="registerUser()">Зарегистрироваться</button>
             </div>
             <div class="no-login">
                 <p>Уже есть аккаунт?</p>
