--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,10 +7,11 @@
             <h2>Вход</h2>
             <div class="login-form-input-btn">
                 <div class="login-form-input">
-                    <input type="text" placeholder="Логин">
-                    <input type="text" placeholder="Пароль">
+                    <input type="text" id="username" placeholder="Логин" required>
+                    <input type="password" id="password" placeholder="Пароль" required>
                 </div>
-                <button class="login-form-btn">Войти</button>
+                <div id="error-message" class="error-message" style="color: red; display: none; margin: 10px 0;"></div>
+                <button class="login-form-btn" onclick="loginUser()">Войти</button>
             </div>
             <div class="no-login">
                 <p>У вас нет аккаунта?</p>
