--- a/main/templates/main/base_light.html
+++ b/main/templates/main/base_light.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
@@ -17,8 +18,9 @@
             <nav class="nav-menu" id="nav-menu">
                 <a href="{% url 'main:home' %}" class="nav-link2">Главная</a>
                 <a href="{% url 'catalog:catalog' %}" class="nav-link2">Каталог</a>
-                <a href="#" class="nav-link2">О нас</a>
-                <a href="#" class="nav-link2">Заказать</a>
+                <a href="{% url 'main:home' %}#about-section" class="nav-link2" id="about-link">О нас</a>
+                <a href="{% url 'accounts:profile' %}#cart1" id="cart-link" class="nav-link2">Заказать</a>
+                
             </nav>
             <div class="action-icons">
                 <div class="icon-wrapper">
@@ -26,7 +28,12 @@
                         <a href="{% url 'accounts:profile' %}">
                             <img src="{% static 'main/img/decoration/account_black.png' %}" alt="">
                         </a>
-                        <img src="{% static 'main/img/decoration/bag_black.png' %}" alt="">
+                        <a href="{% url 'accounts:profile' %}#cart1" id="cart-link" class="cart-link">
+                            <img src="{% static 'main/img/decoration/bag_black.png' %}" alt="Корзина">
+                            {% if user.is_authenticated and cart_item_count > 0 %}
+                                <span class="cart-counter">{{ cart_item_count }}</span>
+                            {% endif %}
+                        </a>
                     </div>
                     <button class="burger" id="burger-btn" aria-label="Открыть меню">
                         <span class="burger-line2"></span>
@@ -37,6 +44,14 @@
             </div>
             </header>
         <main>
+            <div id="notification-container" style="position: fixed; top: 20px; right: 20px; z-index: 9999; display: none;">
+                <div id="notification" class="notification">
+                    <div class="notification-content">
+                        <span id="notification-text"></span>
+                    </div>
+                    <button class="notification-close">&times;</button>
+                </div>
+            </div>
             {% block content %}
               
             {% endblock content %}
@@ -47,10 +62,10 @@
                     <div class="nav-menu2">
 
                         <a class="nav-item" href="{% url 'main:home' %}">Главная</a>
-                        <a class="nav-item" href="#">О нас</a>
-                        <a class="nav-item" href="#">Каталог</a>
-                        <a class="nav-item" href="#">Заказать</a>
-                        <a class="nav-item" href="#">Личный кабинет</a>
+                        <a class="nav-item" href="{% url 'main:home' %}#about-section" class="nav-link" id="about-link">О нас</a>
+                        <a class="nav-item" href="{% url 'catalog:catalog' %}">Каталог</a>
+                        <a class="nav-item" href="{% url 'accounts:profile' %}#cart1" id="cart-link" class="nav-link">Заказать</a>
+                        <a class="nav-item" href="{% url 'accounts:profile' %}">Личный кабинет</a>
                     </div>
                     <div class="icons-container">
                         <img src="{% static 'main/img/decoration/inst.png' %}" alt="">
